stock_api/Deploy/deployment.yaml
# Create App deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-app
  namespace: egeeks
spec:
  selector:
    matchLabels:
      app: stock-app
  template:
    metadata:
      labels:
        app: stock-app
    spec:
      containers:
      - name: stock-app
        image: registry.deti:5000/tista/stockapi:latest
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8005
        volumeMounts:
          - name: images-static
            mountPath: /app/www/images
      restartPolicy: Always
      volumes:
        - name: images-static
          persistentVolumeClaim:
            claimName: tista-images-pvc


# # Create nginx deployment
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: nginx
#   namespace: egeeks
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: nginx
#   strategy: {}
#   template:
#     metadata:
#       labels:
#         app: nginx
#     spec:
#       containers:
#         - image: registry.deti:5000/tista/nginx-proxy
#           name: nginx
#           ports:
#             - containerPort: 80
#           resources: {}
#           volumeMounts:
#             - name: nginx-static
#               mountPath: /var/www/static
#       restartPolicy: Always
#       volumes:
#         - name: nginx-static
#           persistentVolumeClaim:
#             claimName: app-pvc


# Create Service for APP
---
apiVersion: v1
kind: Service
metadata:
  name: stock-app
  namespace: egeeks
spec:
  ports:
  - port: 8005
    targetPort: 8005
  selector:
    app: stock-app


# # Create Service for nginx
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx
#   namespace: egeeks
# spec:
#   ports:
#   - port: 80
#     targetPort: 80
#   selector:
#     app: nginx


# Configure Traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-k3s
  namespace: egeeks
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: tista-stockapi.egs
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stock-app
            port: 
              number: 8005
